fixed spacing under rating

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -90,7 +90,7 @@ body {
 	}
 
 	.notes {
-		font-size: medium;
+		font-size: small;
 		margin: 5px 10px 0px 5px;
 	}
 
